Actualizar script de inicio en package.json para ejecutar create-users.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Script para registrar uno o múltiples usuarios en una API mediante HTTP POST.",
   "main": "create-users.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node create-users.js"
   },
   "author": "",
   "license": "ISC"
